--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,3 +1,36 @@
-*{
-    margin: 10px;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.my_container {
+    border: 2px solid black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
+
+.my_panel {
+    border: 1px dashed black;
+    width: 80%;
+    margin: 20px auto;
+    height: auto;
+    padding: 20px;
+}
+
+.input_form {
+    border: 1px solid blue;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 20px auto;
+    width: 600px;
+    font-size: 16px;
+    text-align: justify;
+}
+
+.center {
+    text-align: center;
+    color: rgb(5,5,110);
 }
