--- a/templates/login.html
+++ b/templates/login.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}">
     <title>Login Page</title>
 </head>
 <body>
-    
+    <div class="my_container">
+        <div class="center">
+            <h1>Quiz Master</h1>
+        </div>
+        <div class="my_panel">
+            <div class="center">Login</div>
+            <div class="input_form">
+                <div class="mb-3">
+                    <label for="user_name" class="form-label">User Name (e-mail)</label>
+                    <input type="email" class="form-control" id="user_name" placeholder="user@gmail.com">
+                </div>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" placeholder="password">
+                </div>
+                <button type="submit" class="btn btn-primary">Login</button>
+                New User? <a href="#">Sign Up</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
