--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,11 @@
             rel="stylesheet"
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"/>
+            <link rel="stylesheet" href="main.css">
     </head>
     <body>
-        
+        <h3 class="center">Welcome to Quiz Master</h3>
+        <div class="input_form">Welcome to the home page of Quiz Master</div>
+        <div class="center"><a href="login.html"type="submit" class="btn btn-primary">Login</a></div>
     </body>
 </html>
