--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,36 +1,53 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    padding: 0;
 }
 
 .my_container {
-    border: 2px solid black;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    padding: 2rem;
+    border: 2px solid #333;
+    border-radius: 10px;
 }
 
 .my_panel {
-    border: 1px dashed black;
     width: 80%;
-    margin: 20px auto;
-    height: auto;
-    padding: 20px;
+    margin: 2rem auto;
+    padding: 2rem;
+    border: 1px dashed #333;
+    border-radius: 10px;
 }
 
 .input_form {
-    border: 1px solid blue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+    border: 1px solid #007bff;
     border-radius: 10px;
-    padding: 20px;
-    margin: 20px auto;
     width: 600px;
-    font-size: 16px;
+    margin: 2rem auto;
+    font-size: 1.2rem;
     text-align: justify;
 }
 
 .center {
     text-align: center;
-    color: rgb(5,5,110);
+    color: #333;
 }
+
+body {
+    background-color: #f9f9f9;
+  }
+  .navbar-brand {
+    font-weight: bold;
+  }
+  .card {
+    margin: 20px 0;
+  }
+  .center {
+    text-align: center;
+    margin: 20px 0;
+  }
