--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,41 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}">
+    <link rel="stylesheet" href="main.css">
     <title>Sign Up Page</title>
 </head>
 <body>
-    <div class="my_container">
-        <div class="center">
-            <h1>Quiz Master</h1>
-        </div>
-        <div class="my_panel">
-            <div class="center">Sign Up</div>
-            <div class="input_form">
-                <div class="mb-3">
-                    <label for="user_name" class="form-label">User Name (e-mail)</label>
-                    <input type="email" class="form-control" id="user_name" placeholder="user@gmail.com">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header text-center">
+                        <h4>Sign Up</h4>
+                    </div>
+                    <div class="card-body">
+                        <form>
+                            <div class="mb-3">
+                                <label for="user_name" class="form-label">User Name (e-mail)</label>
+                                <input type="email" class="form-control" id="user_name" placeholder="user@gmail.com" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="password" placeholder="password" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="full_name" class="form-label">Full Name</label>
+                                <input type="text" class="form-control" id="full_name" placeholder="YourName" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="qualification" class="form-label">Qualification</label>
+                                <input type="text" class="form-control" id="qualification" placeholder="">
+                            </div>
+                            <div class="mb-3">
+                                <label for="dob" class="form-label">Date of Birth</label>
+                                <input type="text" class="form-control" id="dob" placeholder="">
+                            </div>
+                            <div class="mb-3">
+                                <button type="submit" class="btn btn-primary">Sign Up</button>
+                            </div>
+                            <div class="mb-3">
+                                Existing User? <a href="#">Login</a>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="password">
-                </div>
-                <div class="mb-3">
-                    <label for="full_name" class="form-label">Full Name</label>
-                    <input type="text" class="form-control" id="full_name" placeholder="YourName">
-                </div>
-                <div class="mb-3">
-                    <label for="qualification" class="form-label">QUALIFIACTION</label>
-                    <input type="text" class="form-control" id="qualification" placeholder="">
-                </div>
-                <div class="mb-3">
-                    <label for="dob" class="form-label">Date of Birth</label>
-                    <input type="text" class="form-control" id="dob" placeholder="">
-                </div>
-                <button type="submit" class="btn btn-primary">Login</button>
-                Existing User? <a href="#">Login</a>
             </div>
         </div>
     </div>
 </body>
 </html>
+
