changes in models

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,8 +48,8 @@
           <h3 class="header-text">Welcome to Quiz Master</h3>
           <p class="subheading">A web-based quizzing platform for students and teachers</p>
           <div class="d-flex justify-content-center mt-4">
-            <a href="login.html" class="btn btn-primary">Login</a>
-            <a href="signup.html" class="btn btn-primary">Sign Up</a>
+            <a href="/login" class="btn btn-primary">Login</a>
+            <a href="/register" class="btn btn-primary">Sign Up</a>
           </div>
         </div>
       </div>
