--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <title>Admin Page</title>
   <meta charset="utf-8" />
@@ -9,7 +8,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <link rel="stylesheet" href="/static/styles/main.css">
-
 </head>
 
 <body>
@@ -43,7 +41,7 @@
       <!-- Subject Card 1 -->
       <div class="col-md-6 col-lg-4">
         <div class="card">
-          <img src="R.png" class="card-img-top" alt="Subject 1" />
+          <img src="/static/images/R.png" class="card-img-top" alt="Subject 1" />
           <div class="card-body">
             <h5 class="card-title">Subject 1</h5>
             <p class="card-text">
@@ -57,7 +55,7 @@
       <!-- Subject Card 2 -->
       <div class="col-md-6 col-lg-4">
         <div class="card">
-          <img src="R.png" class="card-img-top" alt="Subject 2" />
+          <img src="/static/images/R.png" class="card-img-top" alt="Subject 2" />
           <div class="card-body">
             <h5 class="card-title">Subject 2</h5>
             <p class="card-text">
