--- a/templates/signup.html
+++ b/templates/signup.html
@@ -16,32 +16,32 @@
                         <h4>Sign Up</h4>
                     </div>
                     <div class="card-body">
-                        <form>
+                        <form action="/register" method="POST">
                             <div class="mb-3">
                                 <label for="user_name" class="form-label">User Name (e-mail)</label>
-                                <input type="email" class="form-control" id="user_name" placeholder="user@gmail.com" required>
+                                <input type="email" class="form-control" name="user_name" id="user_name" placeholder="user@gmail.com" required>
                             </div>
                             <div class="mb-3">
                                 <label for="password" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="password" placeholder="password" required>
+                                <input type="password" class="form-control" name="password" id="password" placeholder="password" required>
                             </div>
                             <div class="mb-3">
                                 <label for="full_name" class="form-label">Full Name</label>
-                                <input type="text" class="form-control" id="full_name" placeholder="YourName" required>
+                                <input type="text" class="form-control" name="full_name" id="full_name" placeholder="YourName" required>
                             </div>
                             <div class="mb-3">
                                 <label for="qualification" class="form-label">Qualification</label>
-                                <input type="text" class="form-control" id="qualification" placeholder="">
+                                <input type="text" class="form-control" name="qualification" id="qualification" placeholder="">
                             </div>
                             <div class="mb-3">
                                 <label for="dob" class="form-label">Date of Birth</label>
-                                <input type="text" class="form-control" id="dob" placeholder="">
+                                <input type="date" class="form-control" name="dob" id="dob" placeholder="YYYY-MM-DD">
                             </div>
                             <div class="mb-3">
-                                <button type="submit" class="btn btn-primary">Sign Up</button>
+                                <button type="submit" class="btn btn-primary">Submit</button>
                             </div>
                             <div class="mb-3">
-                                Existing User? <a href="#">Login</a>
+                                Existing User? <a href="/login">Login</a>
                             </div>
                         </form>
                     </div>
