lil bit update on login page

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -42,6 +42,7 @@
                             </div>
                             <div class="mb-3">
                                 Existing User? <a href="/login">Login</a>
+                                <div class="err_msg">{{err_msg}}</div>
                             </div>
                         </form>
                     </div>
