--- a/templates/signup.html
+++ b/templates/signup.html
@@ -42,7 +42,8 @@
                             </div>
                             <div class="mb-3">
                                 Existing User? <a href="/login">Login</a>
-                                <div class="err_msg">{{err_msg}}</div>
+                                <br>
+                                <div class="err_msg" style="color: red !important">{{err_msg}}</div>
                             </div>
                         </form>
                     </div>
@@ -52,4 +53,3 @@
     </div>
 </body>
 </html>
-
