--- a/templates/login.html
+++ b/templates/login.html
@@ -27,6 +27,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Login</button>
                 New User? <a href="/register">Sign Up</a>
+                <div class="err_msg">{{err_msg}}</div>
             </div>
         </div>
         </form>
