--- a/templates/user_dashboard.html
+++ b/templates/user_dashboard.html
@@ -1,70 +1,5 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <title>User Page</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="main.css">
-    <style>
-      body {
-        background-color: #f9f9f9;
-      }
-      .navbar-brand {
-        font-weight: bold;
-      }
-      .card {
-        margin: 20px 0;
-      }
-      .center {
-        text-align: center;
-        margin: 20px 0;
-      }
-      .btn-spacing button {
-        margin-right: 10px;
-      }
-    </style>
-  </head>
-  <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-sm navbar-light bg-primary text-white">
-      <div class="container">
-        <a class="navbar-brand text-white" href="#">Welcome User</a>
-        <button
-          class="navbar-toggler d-lg-none"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#collapsibleNavId"
-          aria-controls="collapsibleNavId"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavId">
-          <ul class="navbar-nav me-auto mt-2 mt-lg-0">
-            <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="#">Summary</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="#">Scores</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="#">Logout</a></li>
-          </ul>
-          <form class="d-flex my-2 my-lg-0">
-            <input
-              class="form-control me-sm-2"
-              type="text"
-              placeholder="Search"
-            />
-            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-          </form>
-        </div>
-      </div>
-    </nav>
+{% extends 'user_layout.html' %}
+{% block content %}
 
     <!-- Content -->
     <div class="container">
@@ -90,12 +25,4 @@
 
       <!-- Add New Subjects Button -->
     </div>
-
-    <!-- Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-cn7l7gDp0eyvrjt6K1B0OJkh8z2DfyF6Lg9tvOJMXx5GpGjn1toDIFbqOtNJ8L8d"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+{% endblock content %}
