improved some html and added new layouts

--- a/templates/user_layout.html
+++ b/templates/user_layout.html
@@ -35,7 +35,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-sm navbar-light bg-primary text-white">
       <div class="container">
-        <a class="navbar-brand text-white" href="#">Welcome User</a>
+        <a class="navbar-brand text-white" href="#">Welcome {{name}}</a>
         <button
           class="navbar-toggler d-lg-none"
           type="button"
