--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -18,9 +18,14 @@
                   <table>
                     <tr><th>ID</th><th>Name of chapter</th></tr>
                     <!-- Add code to loop over chapters here if needed -->
+                  {%for chapter in subject.chapters%}
+                    <tr><td>{{chapter.id}}</td><td>{{chapter.name}}</td></tr>
+                  {%endfor%}
                   </table>
-                  <button type="button" class="btn btn-outline-primary">+ Add Chapters</button>
+                {% else %}
+                  <p>No chapters found</p>
                 {% endif %}
+                  <button type="button" class="btn btn-outline-primary">+ Add Chapters</button>
               </div>
             </div>
           </div>
@@ -29,7 +34,7 @@
     {% else %}
       <h3 class="center">No Subjects Found</h3>
       <!-- Add New Subjects Button -->
-      <div class="center"><button type="button" class="btn btn-primary">+ Add New Subject</button></div>
+      <div class="center"><a href="/add_subjects/{{name}}" type="button" class="btn btn-primary">+ Add New Subject</a></div>
     {% endif %}
   </div> <!-- Closing the container div here -->
 {% endblock %}
