--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -17,24 +17,24 @@
                 {% if subject.chapters %}
                   <table>
                     <tr><th>ID</th><th>Name of chapter</th></tr>
-                    <!-- Add code to loop over chapters here if needed -->
-                  {%for chapter in subject.chapters%}
-                    <tr><td>{{chapter.id}}</td><td>{{chapter.name}}</td></tr>
-                  {%endfor%}
+                    {% for chapter in subject.chapters %}
+                      <tr><td>{{ chapter.id }}</td><td>{{ chapter.name }}</td></tr>
+                    {% endfor %}
                   </table>
                 {% else %}
                   <p>No chapters found</p>
                 {% endif %}
-                  <button type="button" class="btn btn-outline-primary">+ Add Chapters</button>
+                <button type="button" class="btn btn-outline-primary">+ Add Chapters</button>
               </div>
             </div>
           </div>
         {% endfor %}
       </div>
     {% else %}
+      <!-- No Subjects Found -->
       <h3 class="center">No Subjects Found</h3>
       <!-- Add New Subjects Button -->
-      <div class="center"><a href="/add_subjects/{{name}}" type="button" class="btn btn-primary">+ Add New Subject</a></div>
+      <div class="center"><a href="/add_subjects/{{ name }}" type="button" class="btn btn-primary">+ Add New Subject</a></div>
     {% endif %}
   </div> <!-- Closing the container div here -->
 {% endblock %}
