--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -16,15 +16,15 @@
                 </p>
                 {% if subject.chapters %}
                   <table>
-                    <tr><th>ID</th><th>Name of chapter</th></tr>
+                    <tr><th>ID</th><th></th><th>Name of chapter</th></tr>
                     {% for chapter in subject.chapters %}
-                      <tr><td>{{ chapter.id }}</td><td>{{ chapter.name }}</td></tr>
+                      <tr><td>{{ chapter.id }}</td><td></td><td>{{ chapter.name }}</td></tr>
                     {% endfor %}
                   </table>
                 {% else %}
                   <p>No chapters found</p>
                 {% endif %}
-                <button type="button" class="btn btn-outline-primary">+ Add Chapters</button>
+                <a href="/add_chapters/{{ subject.id }}/{{ name }}" type="button" class="btn btn-outline-primary">+ Add Chapters</a>
               </div>
             </div>
           </div>
@@ -35,6 +35,8 @@
       <h3 class="center">No Subjects Found</h3>
       <!-- Add New Subjects Button -->
     {% endif %}
-    <div class="center"><a href="/add_subjects/{{ name }}" type="button" class="btn btn-primary">+ Add New Subject</a></div>
+    <div class="center">
+      <a href="/add_subjects/{{ name }}" type="button" class="btn btn-primary">+ Add New Subject</a></div>
   </div> <!-- Closing the container div here -->
 {% endblock %}
+
