--- a/templates/admin_layout.html
+++ b/templates/admin_layout.html
@@ -22,13 +22,13 @@
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav me-auto mt-2 mt-lg-0">
-          <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/admin_dashboard/{{name}}">Home</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="#">Summary</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="#">Quiz</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="#">Logout</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/login">Logout</a></li>
         </ul>
-        <form class="d-flex my-2 my-lg-0">
-          <input class="form-control me-sm-2" type="text" placeholder="Search" />
+        <form class="d-flex my-2 my-lg-0" method="POST" action="/search/{{name}}">
+          <input class="form-control me-sm-2" type="text" placeholder="Search Here" name="search_txt" id="search_txt">
           <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
