--- a/templates/edit_subject.html
+++ b/templates/edit_subject.html
@@ -1,25 +1,29 @@
 {% extends "admin_layout.html" %}
 
 {% block content %}
+    {% if subject %}
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="card">
           <div class="card-header text-center">
-            <h4>Add Subjects</h4>
+            <h4>Edit Subject</h4>
           </div>
           <div class="card-body">
-            <form action="/add_subjects/{{name}}" method="POST">
+            <form action="/edit_subject/{{subject.id}}/{{name}}" method="POST">
               <div class="mb-3">
                 <label for="subject_name" class="form-label">Subject Name</label>
-                <input type="text" class="form-control" name="subject_name" id="subject_name" placeholder="Subject Name" required>
+                <input type="text" class="form-control" name="subject_name" id="subject_name" value="{{subject.name}}" required>
               </div>
               <div class="mb-3">
                 <label for="subject_description" class="form-label">Subject Description</label>
-                <input type="text" class="form-control" name="subject_description" id="subject_description" placeholder="Subject Description" required>
+                <input type="text" class="form-control" name="subject_description" id="subject_description" value="{{subject.description}}" required>
               </div>
               <div class="mb-3 d-flex justify-content-between">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Save</button>
+                
+                <a href="/delete_subject/{{subject.id}}/{{name}}" type="button" class="btn btn-danger" method="POST">Delete</a>
+
                 <a href="/admin_dashboard/{{name}}" type="button" class="btn btn-primary">Cancel</a>
               </div>
             </form>
@@ -28,4 +32,5 @@
       </div>
     </div>
   </div>
+    {% endif %}
 {% endblock %}
