done all admin dashboard

--- a/templates/edit_subject.html
+++ b/templates/edit_subject.html
@@ -20,9 +20,7 @@
                 <input type="text" class="form-control" name="subject_description" id="subject_description" value="{{subject.description}}" required>
               </div>
               <div class="mb-3 d-flex justify-content-between">
-                <button type="submit" class="btn btn-primary">Save</button>
-                
-                <a href="/delete_subject/{{subject.id}}/{{name}}" type="button" class="btn btn-danger" method="POST">Delete</a>
+                <button type="submit" class="btn btn-success">Save</button>
 
                 <a href="/admin_dashboard/{{name}}" type="button" class="btn btn-primary">Cancel</a>
               </div>
