--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -10,21 +10,49 @@
             <div class="card">
               <img src="/static/images/R.png" class="card-img-top" alt="Subject 1" />
               <div class="card-body">
-                <h5 class="card-title"><a href="/edit_subject/{{ subject.id }}/{{ name }}">{{ subject.name }}</a></h5>
+                <h5 class="card-title">
+                  {{ subject.name }}
+                </h5>
                 <p class="card-text">
                   {{ subject.description }}
                 </p>
+                <div class="d-flex justify-content-between">
+                  <!-- Edit button for subject -->
+                  <a href="/edit_subject/{{ subject.id }}/{{ name }}" class="btn btn-warning btn-sm">Edit</a>
+                  <!-- Delete button for subject -->
+                  <a href="/delete_subject/{{ subject.id }}/{{ name }}" class="btn btn-danger btn-sm" 
+                     onclick="return confirm('Are you sure you want to delete this subject?')">Delete</a>
+                </div>
                 {% if subject.chapters %}
-                  <table>
-                    <tr><th>ID</th><th></th><th>Name of chapter</th></tr>
-                    {% for chapter in subject.chapters %}
-                      <tr><td><a href="/edit_chapter/{{ chapter.id }}/{{ name }}"></a>{{ chapter.id }}</td><td></td><td>{{ chapter.name }}</td></tr>
-                    {% endfor %}
+                  <table class="table mt-3">
+                    <thead>
+                      <tr>
+                        <th>ID</th>
+                        <th>Name of Chapter</th>
+                        <th>Actions</th> <!-- Adding the Actions column -->
+                      </tr>
+                    </thead>
+                    <tbody>
+                      {% for chapter in subject.chapters %}
+                        <tr>
+                          <td>{{ chapter.id }}</td>
+                          <td>{{ chapter.name }}</td>
+                          <td>
+                            <!-- Edit button for chapter -->
+                            <a href="/edit_chapter/{{ chapter.id }}/{{ name }}" class="btn btn-warning btn-sm">Edit</a>
+                            <!-- Delete button for chapter -->
+                            <a href="/delete_chapter/{{ chapter.id }}/{{ name }}" class="btn btn-danger btn-sm" 
+                               onclick="return confirm('Are you sure you want to delete this chapter?')">Delete</a>
+                          </td>
+                        </tr>
+                      {% endfor %}
+                    </tbody>
                   </table>
                 {% else %}
                   <p>No chapters found</p>
                 {% endif %}
-                <a href="/add_chapters/{{ subject.id }}/{{ name }}" type="button" class="btn btn-outline-primary">+ Add Chapters</a>
+                
+                <div class="center"><a href="/add_chapters/{{ subject.id }}/{{ name }}" type="button" class="btn btn-outline-primary">+ Add Chapters</a></div>
               </div>
             </div>
           </div>
@@ -34,9 +62,9 @@
       <!-- No Subjects Found -->
       <h3 class="center">No Subjects Found</h3>
       <!-- Add New Subjects Button -->
-    {% endif %}
+    {% endif %} 
     <div class="center">
-      <a href="/add_subjects/{{ name }}" type="button" class="btn btn-primary">+ Add New Subject</a></div>
+      <a href="/add_subjects/{{ name }}" type="button" class="btn btn-primary">+ Add New Subject</a>
+    </div>
   </div> <!-- Closing the container div here -->
 {% endblock %}
-
