--- a/templates/admin_layout.html
+++ b/templates/admin_layout.html
@@ -14,7 +14,7 @@
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-sm navbar-light bg-primary text-white">
     <div class="container">
-      <a class="navbar-brand text-white" href="#">Welcome {{name}}</a>
+      <a class="navbar-brand text-white" href="#">Welcome {{name[:-10]}}</a>
       <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
         data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
         aria-label="Toggle navigation">
