--- a/templates/edit_chapter.html
+++ b/templates/edit_chapter.html
@@ -20,12 +20,7 @@
                                     <input type="text" class="form-control" name="chapter_description" id="chapter_description" value="{{chapter.description}}" required>
                                 </div>
                                 <div class="mb-3 d-flex justify-content-between">
-                                    <button type="submit" class="btn btn-primary">Submit</button>
-                                    
-                                    <!-- Delete Button Form -->
-                                    <form action="/delete_chapter/{{chapter.id}}/{{name}}" method="POST" style="display:inline;">
-                                        <button type="submit" class="btn btn-danger">Delete</button>
-                                    </form>
+                                    <button type="submit" class="btn btn-success">Save</button>
 
                                     <a href="/admin_dashboard/{{name}}" type="button" class="btn btn-secondary">Cancel</a>
                                 </div>
