done all admin dashboard final

--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
             <h1>Quiz Master</h1>
         </div>
         <div class="my_panel">
-            <div class="center">Login</div>
+            <div class="center"><h3>Login</h3></div>
             <!-- login form -->
             <form action="/login" method="POST">
             <div class="input_form">
