--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,48 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}">
     <title>Sign Up Page</title>
 </head>
 <body>
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="card">
-                    <div class="card-header text-center">
-                        <h4>Sign Up</h4>
-                    </div>
-                    <div class="card-body">
-                        <form action="/register" method="POST">
-                            <div class="mb-3">
-                                <label for="user_name" class="form-label">User Name (e-mail)</label>
-                                <input type="email" class="form-control" name="user_name" id="user_name" placeholder="user@gmail.com" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="password" class="form-label">Password</label>
-                                <input type="password" class="form-control" name="password" id="password" placeholder="password" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="full_name" class="form-label">Full Name</label>
-                                <input type="text" class="form-control" name="full_name" id="full_name" placeholder="YourName" required>
-                            </div>
-                            <div class="mb-3">
-                                <label for="qualification" class="form-label">Qualification</label>
-                                <input type="text" class="form-control" name="qualification" id="qualification" placeholder="">
-                            </div>
-                            <div class="mb-3">
-                                <label for="dob" class="form-label">Date of Birth</label>
-                                <input type="date" class="form-control" name="dob" id="dob" placeholder="YYYY-MM-DD">
-                            </div>
-                            <div class="mb-3">
-                                <button type="submit" class="btn btn-primary">Submit</button>
-                            </div>
-                            <div class="mb-3">
-                                Existing User? <a href="/login">Login</a>
-                                <br>
-                                <div class="err_msg" style="color: red !important">{{err_msg}}</div>
-                            </div>
-                        </form>
+    <div class="my_container">
+        <div class="center">
+            <h1>Quiz Master</h1> 
+        </div>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-header text-center">
+                            <h4>Sign Up</h4>
+                        </div>
+                        <div class="card-body">
+                            <form action="/register" method="POST">
+                                <div class="mb-3">
+                                    <label for="user_name" class="form-label">User Name (e-mail)</label>
+                                    <input type="email" class="form-control" name="user_name" id="user_name" placeholder="user@gmail.com" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="password" class="form-label">Password</label>
+                                    <input type="password" class="form-control" name="password" id="password" placeholder="password" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="full_name" class="form-label">Full Name</label>
+                                    <input type="text" class="form-control" name="full_name" id="full_name" placeholder="YourName" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="qualification" class="form-label">Qualification</label>
+                                    <input type="text" class="form-control" name="qualification" id="qualification" placeholder="Qualification">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="dob" class="form-label">Date of Birth</label>
+                                    <input type="date" class="form-control" name="dob" id="dob">
+                                </div>
+                                <div class="mb-3">
+                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                </div>
+                                <div class="mb-3">
+                                    Existing User? <a href="/login">Login</a>
+                                    <br>
+                                    <div class="err_msg" style="color: red !important">{{err_msg}}</div>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
