--- a/templates/admin_layout.html
+++ b/templates/admin_layout.html
@@ -24,7 +24,7 @@
         <ul class="navbar-nav me-auto mt-2 mt-lg-0">
           <li class="nav-item"><a class="nav-link text-white" href="/admin_dashboard/{{name}}">Home</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="#">Summary</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="#">Quiz</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/quiz/{{name}}">Quiz</a></li>
           <li class="nav-item"><a class="nav-link text-white" href="/login">Logout</a></li>
         </ul>
         <form class="d-flex my-2 my-lg-0" method="POST" action="/search/{{name}}">
