--- a/templates/user_dashboard.html
+++ b/templates/user_dashboard.html
@@ -1,13 +1,12 @@
 {% extends 'user_layout.html' %}
 {% block content %}
-
     <!-- Content -->
     <div class="container">
       <div class="row">
         <!-- First Card -->
         <div class="col-md-6 col-lg-4">
           <div class="card">
-            <img src="R.png" class="card-img-top" alt="Upcoming Quizzes" />
+            <img src="/static\images\R.png" class="card-img-top" alt="Upcoming Quizzes" />
             <div class="card-body">
               <h5 class="card-title">Upcoming Quizzes</h5>
               <p class="card-text">
