--- a/templates/user_layout.html
+++ b/templates/user_layout.html
@@ -49,10 +49,10 @@
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavId">
           <ul class="navbar-nav me-auto mt-2 mt-lg-0">
-            <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="user_dashboard.html">Home</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="#">Summary</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="#">Scores</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="#">Logout</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="/login">Logout</a></li>
           </ul>
           <form class="d-flex my-2 my-lg-0">
             <input
