lil bit incomplete quiz portal with comments

--- a/templates/quiz_dashboard.html
+++ b/templates/quiz_dashboard.html
@@ -1,19 +1,15 @@
 {% extends 'admin_layout.html' %} <!-- Extends admin layout -->
 {% block content %}
-  <!-- Admin Dashboard -->
   <div class="container">
-    {% if quizzes %}
+    {% if Quizzes %}
       <div class="row">
-        {% for quiz in quizzes %}
-          <!-- Quiz Card -->
+        {% for quiz in Quizzes %}
           <div class="col-md-6 col-lg-4">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">
-                  {{ quiz.name }}
-                </h5>
+                <h5 class="card-title">{{ quiz.name }}</h5>
                 <p class="card-text">
-                  Chapter: {{ quiz.chapter_name }}<br>
+                  Chapter: {{ quiz.chapter.name }}<br>
                   Date: {{ quiz.date_of_quiz }}<br>
                   Duration: {{ quiz.time_duration }} mins<br>
                   Remarks: {{ quiz.remarks }}
@@ -25,17 +21,20 @@
                   <a href="/delete_quiz/{{ quiz.id }}/{{ name }}" class="btn btn-danger btn-sm" 
                      onclick="return confirm('Are you sure you want to delete this quiz?')">Delete</a>
                 </div>
+                <!-- Add Question button for each quiz -->
+                <div class="d-flex justify-content-between mt-3">
+                  <a href="/add_question/{{ quiz.id }}" class="btn btn-success btn-sm">+ Add Question</a>
+                </div>
               </div>
             </div>
           </div>
         {% endfor %}
       </div>
     {% else %}
-      <!-- No Quizzes Found -->
       <h3 class="center">No Quizzes Found</h3>
     {% endif %}
     <div class="center">
       <a href="/add_quiz/{{ chapter_id }}/{{ name }}" type="button" class="btn btn-primary">+ Add New Quiz</a>
     </div>
-  </div> <!-- Closing the container div here -->
+  </div>
 {% endblock %}
