add ques + ch error

--- a/templates/add_question.html
+++ b/templates/add_question.html
@@ -36,7 +36,7 @@
               </div>
               <div class="mb-3 d-flex justify-content-between">
                 <button type="submit" class="btn btn-primary">Submit</button>
-                <a href="/quiz_detail/{{ quiz.id }}/{{ name }}" type="button" class="btn btn-secondary">Cancel</a>
+                <a href="/quiz/{{ name }}" type="button" class="btn btn-secondary">Cancel</a>
               </div>
             </form>
           </div>
