--- a/templates/quiz_dashboard.html
+++ b/templates/quiz_dashboard.html
@@ -23,7 +23,7 @@
                 </div>
                 <!-- Add Question button for each quiz -->
                 <div class="d-flex justify-content-between mt-3">
-                  <a href="/add_question/{{ quiz.id }}" class="btn btn-success btn-sm">+ Add Question</a>
+                  <a href="/add_question/{{ quiz.id }}/{{ name }}" class="btn btn-success btn-sm">+ Add Question</a>
                 </div>
               </div>
             </div>
