--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -1,4 +1,4 @@
-{% extends 'admin_layout.html' %} <!-- Extends admin layout -->
+{% extends 'admin_layout.html' %} 
 {% block content %}
   <!-- Admin Dashboard -->
   <div class="container">
@@ -71,5 +71,5 @@
     <div class="center">
       <a href="/add_subjects/{{ name }}" type="button" class="btn btn-primary">+ Add New Subject</a>
     </div>
-  </div> <!-- Closing the container div here -->
+  </div> 
 {% endblock %}
