search left & user q left

--- a/templates/admin_layout.html
+++ b/templates/admin_layout.html
@@ -14,12 +14,8 @@
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-sm navbar-light bg-primary text-white">
     <div class="container">
-      <a class="navbar-brand text-white" href="#">Welcome {{name[:-10]}}</a>
-      <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
-        data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <span class="navbar-brand text-white">Welcome {{ name[:-10] | title}}</span>
+
       <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav me-auto mt-2 mt-lg-0">
           <li class="nav-item"><a class="nav-link text-white" href="/admin_dashboard/{{name}}">Home</a></li>
