view,start quiz left

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -41,8 +41,9 @@
                                     <label for="dob" class="form-label">Date of Birth</label>
                                     <input type="date" class="form-control" name="dob" id="dob">
                                 </div>
-                                <div class="mb-3">
+                                <div class="mb-3 d-flex justify-content-between">
                                     <button type="submit" class="btn btn-primary">Submit</button>
+                                    <a href="/login" class="btn btn-primary">Cancel</a>
                                 </div>
                                 <div class="mb-3">
                                     Existing User? <a href="/login">Login</a>
